@@ -27,9 +27,15 @@ TCL_VERSION = 8.4
 #
 # The settings determined by "./configure" are:
 #
-TCL_INCLUDE = -I/usr/include/tcl8.4
+
+TCL_INCLUDE = -I/usr/include
 TCL_LIBRARY = -L/usr/lib -ltcl$(TCL_VERSION) -ldl
 TK_LIBRARY  = $(TCL_LIBRARY) -ltk$(TCL_VERSION) -lX11
+
+#TCLTK_PATH = /usr/local/ActiveTcl8.5/
+#TCL_INCLUDE = -I$(TCLTK_PATH)/include
+#TCL_LIBRARY = -L$(TCLTK_PATH)/lib -ltcl$(TCL_VERSION) -ldl
+#TK_LIBRARY  = $(TCL_LIBRARY) -ltk$(TCL_VERSION) -lX11
 
 ### Here are other commonly used settings for the Tcl/Tk compiler options:
 
