@@ -3,7 +3,7 @@
 |               PENDING - WORK IN PROGRESS                  |
 |                                                           |
  ===========================================================
-régler pb de donations -> mettre à jour le site (URGENT !)
+
  ===========================================================
 |                                                           |
 |                          BUGS                             |
