@@ -568,3 +568,5 @@ scid-3.6.26
 - Confirm / discard dialog box : rewritten to look a little bit better
 - photos of players are now also searched in Scid shared directory (under photos directory) (Thanks to Mikhail Kalenkov)
 - if "Strip out coloured square/arrow codes" is checked and PGN display is in color, comments are no longer surrounded with {} 
+- PGN window : removed extra lines between moves and comments
+
